Finish section hobby - html and scss

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                             </div>
                         </div>
                     </div>
-                  
+
                 </div>
             </div>
         </div>
@@ -276,53 +276,77 @@
                     <h2>#hobby</h2>
                     <div class="text-title__line"></div>
                 </div>
-                <div class="hobby-box">
-                    <div class="hobby-box__img"></div>
-                    <div class="hobby-box__text">
-                        <h3>Carpentry</h3>
-                        <p>I've been absolutely amezed with the scent of freshly cut wood. But my entry into the world
-                            of carpentry is a bit like the plot twist in a Hollywood movie - it didn't happen until a
-                            few years back. <br><br>I'm a self-taught wood whisperer with an undying reverence for the
-                            raw,
-                            unadulterated beauty of timber. I relish the moments when I can kick back without any
-                            pressure, unleashing my inner carpentry ideas. <br><br>First, there's the thrill of
-                            sketching out a
-                            project on a piece of paper, and then it's time for the grand finale - calculating the
-                            measurements. But let me tell you, that's just the warm-up act. The real fun begins when
-                            something unexpectedly goes awry, and you're suddenly thrown into a whirlwind of alternative
-                            solutions. And you know what? I absolutely thrive on it!</p>
+                <div class="hobby__box">
+                    <div class="hobby__box-item">
+                        <div class="hobby__box-item__img">
+                            <img src="./img/hobbies/signpost.png" alt="Signpost">
+                        </div>
+                        <div class="hobby__box-item__text">
+                            <h3>Trekking</h3>
+                            <p>I am the person who like to clean her head and let the stress go away. And you know what
+                                my
+                                secret weapon is?<br><br>Walking and watching the coolest places what naure can bring.
+                                <br><br>
+                                Before you can witness the spectacle, you've got to negotiate a hostage exchange with
+                                your
+                                leg
+                                muscles, who demand a significant ransom. It's like striking a deal - "We'll
+                                climb, but you better deliver the goods!" And what goods they are! <br><br>When you
+                                finally
+                                conquer
+                                that mountain, you're greeted with a refreshing breeze and a view that could make even
+                                your
+                                wildest dreams blush. It's like hitting the "refresh" button on your brain while
+                                treating
+                                your senses to a visual feast.
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <div class="hobby-box hobby-box--left">
-                    <div class="hobby-box__img"></div>
-                    <div class="hobby-box__text">
-                        <h3>Trekking</h3>
-                        <p>I am the person who like to clean her head and let the stress go away. And you know what my
-                            secret weapon is?<br><br>Walking and watching the coolest places what naure can bring.
-                            <br><br>
-                            Before you can witness the spectacle, you've got to negotiate a hostage exchange with your
-                            leg
-                            muscles, who demand a significant ransom. It's like striking a deal - "We'll
-                            climb, but you better deliver the goods!" And what goods they are! <br><br>When you finally
-                            conquer
-                            that mountain, you're greeted with a refreshing breeze and a view that could make even your
-                            wildest dreams blush. It's like hitting the "refresh" button on your brain while treating
-                            your senses to a visual feast.
-                        </p>
+                <div class="hobby__box">
+                    <div class="hobby__box-item hobby__box-item--left">
+                        <div class="hobby__box-item__img">
+                            <img src="./img/hobbies/carpentry.png" alt="Furniture">
+                        </div>
+                        <div class="hobby__box-item__text">
+                            <h3>Carpentry</h3>
+                            <p>I've been absolutely amezed with the scent of freshly cut wood. But my entry into the
+                                world
+                                of carpentry is a bit like the plot twist in a Hollywood movie - it didn't happen until
+                                a
+                                few years back. <br><br>I'm a self-taught wood whisperer with an undying reverence for
+                                the
+                                raw,
+                                unadulterated beauty of timber. I relish the moments when I can kick back without any
+                                pressure, unleashing my inner carpentry ideas. <br><br>First, there's the thrill of
+                                sketching out a
+                                project on a piece of paper, and then it's time for the grand finale - calculating the
+                                measurements. But let me tell you, that's just the warm-up act. The real fun begins when
+                                something unexpectedly goes awry, and you're suddenly thrown into a whirlwind of
+                                alternative
+                                solutions. And you know what? I absolutely thrive on it!</p>
+
+                        </div>
                     </div>
                 </div>
-                <div class="hobby-box">
-                    <div class="hobby-box__img"></div>
-                    <div class="hobby-box__text">
-                        <h3>Bicycle</h3>
-                        <p>If I can't aford for trekking trip, I spend time on bike. I explore whole area where is no
-                            rush
-                            or where the only thing racing is my heart rate when I spot an unexpected pothole.<br><br>
-                            Love to watch changes in villages and explore new roads by getting lost - well... it
-                            happends
-                            sometimes. <br><br>Here's the deal: I won't move from home, if I know I won't do minimum
-                            30km on
-                            wheels.</p>
+                <div class="hobby__box">
+                    <div class="hobby__box-item">
+                        <div class="hobby__box-item__img">
+                            <img src="./img/hobbies/bicycle.png" alt="Bicycle">
+                        </div>
+                        <div class="hobby__box-item__text">
+                            <h3>Bicycle</h3>
+                            <p>If I can't aford for trekking trip, I spend time on bike. I explore whole area where is
+                                no
+                                rush
+                                or where the only thing racing is my heart rate when I spot an unexpected
+                                pothole.<br><br>
+                                Love to watch changes in villages and explore new roads by getting lost - well... it
+                                happends
+                                sometimes. <br><br>Here's the deal: I won't move from home, if I know I won't do minimum
+                                30km on
+                                wheels.</p>
+                        </div>
                     </div>
                 </div>
             </div>
