Change text in hobby section - HTML

--- a/index.html
+++ b/index.html
@@ -283,9 +283,7 @@
                         </div>
                         <div class="hobby__box-item__text">
                             <h3>Trekking</h3>
-                            <p>I am the person who like to clean her head and let the stress go away. And you know what
-                                my
-                                secret weapon is?<br><br>Walking and watching the coolest places what naure can bring.
+                            <p>I am the person who like to clean her head and let the stress go away. And my secret weapon is walking and watching the coolest places what naure can bring.
                                 <br><br>
                                 Before you can witness the spectacle, you've got to negotiate a hostage exchange with
                                 your
@@ -296,13 +294,13 @@
                                 conquer
                                 that mountain, you're greeted with a refreshing breeze and a view that could make even
                                 your
-                                wildest dreams blush. It's like hitting the "refresh" button on your brain while
-                                treating
-                                your senses to a visual feast.
+                                wildest dreams blush!
                             </p>
                         </div>
                     </div>
                 </div>
+
+                <!--TODO zmienić w img zamiast kółka dać after i before w rogach przeciwległych? -->
                 <div class="hobby__box">
                     <div class="hobby__box-item hobby__box-item--left">
                         <div class="hobby__box-item__img">
@@ -310,22 +308,17 @@
                         </div>
                         <div class="hobby__box-item__text">
                             <h3>Carpentry</h3>
-                            <p>I've been absolutely amezed with the scent of freshly cut wood. But my entry into the
-                                world
-                                of carpentry is a bit like the plot twist in a Hollywood movie - it didn't happen until
-                                a
-                                few years back. <br><br>I'm a self-taught wood whisperer with an undying reverence for
+                            <p>I'm a self-taught wood whisperer with an undying reverence for
                                 the
                                 raw,
                                 unadulterated beauty of timber. I relish the moments when I can kick back without any
                                 pressure, unleashing my inner carpentry ideas. <br><br>First, there's the thrill of
                                 sketching out a
-                                project on a piece of paper, and then it's time for the grand finale - calculating the
-                                measurements. But let me tell you, that's just the warm-up act. The real fun begins when
+                                project on a piece of paper, and then it's time for calculating the
+                                measurements. <br>But let me tell you, that's just the warm-up act. The real fun begins when
                                 something unexpectedly goes awry, and you're suddenly thrown into a whirlwind of
                                 alternative
                                 solutions. And you know what? I absolutely thrive on it!</p>
-
                         </div>
                     </div>
                 </div>
@@ -336,7 +329,7 @@
                         </div>
                         <div class="hobby__box-item__text">
                             <h3>Bicycle</h3>
-                            <p>If I can't aford for trekking trip, I spend time on bike. I explore whole area where is
+                            <p>If I can't aford for trekking trips, I spend time on bike. I explore whole area where is
                                 no
                                 rush
                                 or where the only thing racing is my heart rate when I spot an unexpected
