Add animation on quote - abt-me section

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                                 <p>"</p>
                             </div>
                             <div class="abt-me__quote-text">
-                                <p>What pushes us to try new things is not logic or reason...<br> but hope and
-                                    dreams, heart and the inner voice.</p>
+                                <span>What pushes us to try new things is not logic or reason...<br> but hope and
+                                    dreams, heart and the inner voice.</span>
                             </div>
                             <div class="abt-me__quote-quoter">
                                 <p>"</p>
