--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
     <!--TODO na PC w trakcie scrolla w dół aside chowa się a header rozwija do lewej krawędzi-->
     <header class="header">
+        <div class="header__img"></div>
         <div class="burger-btn">
             <div class="burger-btn__box">
                 <div class="burger-btn__bars"></div>
