Finish counter section - SCSS

--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
 
     <!--TODO wjechanie counter-item i potem efekt naliczania liczb-->
     <section class="counter">
+        <div class="counter-bg"></div>
         <div class="counter-item">
             <img src="./img/counter/coffee.png" alt="Cup of coffee">
             <h5>coffee shots</h5>
