--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
 
 
         <div class="exp">
+            <div class="exp-bg"></div>
             <div class="wrapper">
                 <div class="exp-road">
                     <div class="exp-road__text">
